--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,4 +1,9 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
+@import "button";
+@import "cards";
+@import "cover";
+@import "movies";
 @import "navbar";
+@import "tags";
