--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,8 +1,8 @@
-<%= simple_form_for [@list, @bookmark] do |f| %>
-  <%= f.input :comment %>
-  <%= f.association :movie, collection: Movie.order(:title), prompt: "Choose a Movie"%>
-  <%= f.button :submit %>
-<% end %>
+<%# <%= simple_form_for [@list, @bookmark] do |f| %> %>
+  <%# <%= f.input :comment %> %>
+  <%# <%= f.association :movie, collection: Movie.order(:title), prompt: "Choose a Movie"%> %>
+  <%# <%= f.button :submit %> %>
+<%# <% end %> %>
 
 <div class="container py-5">
   <div class="row">
