--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,9 +1,9 @@
-<%# <h1><%= @list.name %></h1> %>
-<%# <% if @list.photo.attached? %> %>
-<%# <%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %> %>
-<%# <% end %> %>
-<%# <%= link_to "add bookmark",  new_list_bookmark_path(@list) %> %>
-<%# <%= link_to "return to List", root_path %> %>
+<%# <%= @list.name %>
+<%# <% if @list.photo.attached? %>
+<%# <%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>
+<%# <% end %>
+<%# <%= link_to "add bookmark",  new_list_bookmark_path(@list) %>
+<%# <%= link_to "return to List", root_path %>
 
 <div class="position-relative">
   <div class="card-category card-large" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= @list.photo.attached? ? cl_image_path(@list.photo.key) : asset_path('list_background.jpg') %>)">
